# desktop-pet

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MAINTAINERS.md  Makefile  README.md  SECURITY.md  lefthook.yml
.devcontainer/: devcontainer.json  post-create.sh  setup.sh
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-release.yml  ci.yml  codeql.yml  release.yml
docs/: 索引.md
docs/adr/: 0001-tauri-v2-go-petcore.md  0002-sqlite-fts5-memory.md  0003-three-tier-plugin.md  README.md
docs/superpowers/specs/: 2026-07-09-desktop-pet-design.md  2026-07-11-ai-agent-design.md  2026-07-11-config-system-design.md  2026-07-11-core-engine-sidecar-design.md  2026-07-11-event-system-design.md  2026-07-11-fsm-design.md  2026-07-11-llm-adapter-design.md  2026-07-11-memory-system-design.md  2026-07-11-tool-plugin-system-design.md  2026-07-12-pastoral-design.md
docs/事后复盘/: README.md
docs/前端/: 索引.md
docs/前端/API调用/: TauriIPC桥接.md
docs/前端/原生功能/: 原生功能.md
docs/前端/构建与打包/: 构建与打包.md
docs/前端/状态管理/: 宠物状态机.md
docs/前端/路由导航/: 路由配置.md
docs/参考/: 优秀开源项目参考.md  架构规划方案.md  迁移规划.md
docs/后端/: 索引.md
docs/后端/AI_Agent引擎/: 概述.md
docs/后端/LLM适配层/: 概述.md
docs/开发指南/: UI开发流程.md  事故响应.md  代码规范.md  发布检查清单.md  威胁建模.md  提交前检查清单.md  提交规范.md  文档规范.md  未解决问题清单.md  构建与测试.md  版本号规范.md  质量基线.md  错误日志规范.md  项目问题审查报告.md
docs/概览/: 快速上手.md  架构总览.md  项目简介.md
docs/规划/: 01-事件系统.md  02-配置管理.md  03-状态机.md  04-LLM适配层.md  05-记忆系统.md  06-AI-Agent.md  07-工具系统+插件系统.md  08-核心引擎+Sidecar通信.md
docs/踩坑/: README.md  vitest-2x-升级-4x-踩坑记录.md
frontend/: .prettierignore  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  alias-test.test.tsx  hoisted-test.test.tsx  import-test.test.tsx  index.css  main.tsx  minimal.test.tsx  motion-render-test.test.tsx  motion-test.test.tsx  render-test.test.tsx  zustand-test.test.tsx
petcore/: .golangci.yml  .goreleaser.yaml  config.development.example.toml  config.example.toml  config.production.example.toml  go.mod  go.sum
scripts/: build.sh  bump-version.sh  dev.sh
src-tauri/: Cargo.toml  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  commands_test.rs  main.rs  sidecar.rs  tray.rs  window.rs  window_test.rs
(+79 files in other folders)
